assets/stylesheets/sass/components/browser.sass
// Copyright © 2024 – 2026 Kiran Brahmatewari.
//
// Modification of original work by Samantha O'Gorman.
// (https://codepen.io/SAM-O10/pen/JxOeVj)
//
// This work is licensed under the terms of the MIT license.
// Refer to https://opensource.org/licenses/MIT for a copy.

@use "mixins" as mix
@use "variables" as vars

$window-width: 55rem
$icon-size: 1.25rem
$icon-dim: 2.25rem
$font-size: 1.15rem
$header-color: rgb(56, 58, 55)

#browser
  font-family: vars.$font-family
  flex-direction: column
  @include mix.window(rgb(30, 30, 30), $window-width, vars.$height, $window-width)

  i
    width: $icon-dim
    height: $icon-dim
    text-align: center

  .top
    padding: vars.$padding-2x 1.4rem
    position: relative
    background: $header-color
    overflow: hidden
    cursor: vars.$default-cursor
    display: flex
    justify-content: space-between
    @include mix.disable-select()

    .browser-buttons
      @include mix.buttons()

    .icons
      font-size: $icon-size
      text-align: center
      border-radius: vars.$border-radius

    .left, .right
      display: flex
      align-items: center

      span
        display: inline-block
        color: vars.$font-color
        border-radius: vars.$border-radius

        &:hover
          background-color: rgba(255, 255, 255, 0.1)
          transition: background vars.$transition ease

        &.inactive
          color: #707070

          &:hover
            background: none

          &:active i
            color: #707070

        i
          //padding: vars.$padding 0
          align-content: center

          &:active
            color: white

    .address
      background: none
      line-height: $font-size
      border: vars.$border-thickness solid rgba(255, 255, 255, 0.25)
      width: 29rem
      font-size: $font-size
      border-radius: vars.$border-radius

      >
        input
          cursor: vars.$text-cursor
          font-size: $font-size
          line-height: $font-size
          height: 100%
          width: 100%
          padding: 0 vars.$padding
          color: white
          background: none
          position: relative
          text-align: center

          &:focus
            outline: 0 none
            text-align: left

  .inside
    color: white
    width: 100%
    height: 100%
    padding: vars.$padding-2x
    overflow: auto

    h1, h2, .fas
      font-weight: 600 !important

    h1
      text-align: center
      font-size: calc($font-size + 1rem)

    h2
      font-size: calc($font-size + 0.6rem)

    .section
      padding-bottom: vars.$padding-2x

      &:last-of-type
        padding-bottom: 0
      
      .row .arrow, .item-content, .row, .row .stars, .row .beginning
        place-items: center
        display: flex

      .row
        padding: vars.$padding-2x
        flex-direction: row
        justify-content: space-between
        border-radius: calc(vars.$border-radius * 1.5)
        @include mix.disable-select()

        &:hover
          background: rgba(255, 255, 255, 0.15)
          cursor: vars.$pointer-cursor
          transition: background vars.$transition ease

        .beginning
          width: 11rem
          gap: vars.$padding-2x
          align-items: center

        img, svg
          width: $icon-dim
          height: $icon-dim

        i, .stars i
          font-size: $icon-dim
          font-weight: normal
        
        .heading
          position: relative
          color: white
          font-size: calc($font-size + 0.1rem)
          font-weight: 700

        .stars
          margin-left: -1.75rem
          gap: vars.$padding-2x
          flex-direction: row
          //max-width: calc($window-width - (vars.$padding * 1.5 * 2 + 10.5rem + vars.$padding * 2 * 2)) 30rem

        .arrow
          justify-content: flex-end

          i
            color: vars.$font-color !important

      .rotate0, .rotate90, .item-content, .hidden-content
        transition: all vars.$transition ease

      .item-content, .hidden-content
        overflow: hidden

      .item-content
        color: vars.$font-color
        padding: vars.$padding
        height: auto
        font-size: $font-size
        flex-direction: column

        a
          text-decoration: underline

      .hidden-content
        display: none
        height: 0

      .rotate0
        transform: rotate(0deg)

      .rotate90
        transform: rotate(90deg)

      #html
        color: #E34F26

      #java
        color: #f89820

      #python
        color: #3776AB

      #css
        color: #663399

      #jquery
        color: #0769AD

      #javascript
        color: #F7DF1E

      #typescript
        color: #3178C6

      #c
        color: #A8B9CC

      #cpp
        color: #00599C

      #latex
        color: #008080
      
      #json, #markdown, #copilot, #macos
        color: #000000
      
      #yaml
        color: #CB171E

      #terraform
        color: #623CE4

      #uml
        color: #FABD14

      #r
        color: #276DC3

      #jinja
        color: #B41717

      #mysql
        color: #4479A1

      #git
        color: #F05032

      #github
        color: #181717

      #bash
        color: #4EAA25

      #confluence
        color: #172B4D
      
      #docker
        color: #2496ED
      
      #jira
        color: #0052CC

      #vim
        color: #019733
      
      #jupyter
        color: #F37626

      #conda
        color: #44A833

      #vmware
        color: #607078

      #grafana
        color: #F46800

      #qiskit
        color: #6929C4

      #numpy
        color: #013243

      #pytorch
        color: #EE4C2C
      
      #tensorflow
        color: #FF6F00

      #keras
        color: #D00000
      
      #maven
        color: #C71A36

      #junit
        color: #25A162
      
      #sass
        color: #CC6699

      #roboflow
        color: #6706CE
      
      #arduino
        color: #00979D

      #espressif
        color: #EF3D25
      
      #platformio
        color: #FE7A16
      
      #colab
        color: #F9AB00
      
      #opencv
        color: #5C3EE8

      #swift
        color: #F05138

      #claude
        color: #D97757

      #chatgpt
        color: #412991

      #ubuntu
        color: #E95420

      #windows
        color: #00A4EF

      #fsharp
        color: #378BBA

      #hf
        color: #FFD21E

      #wine
        color: #800000

      #gemini
        color: #8E75B2

      #cmake
        color: #064F8C

      #make
        color: #6D00CC

      #mlx
        color: #D4D4D4

      #llama
        color: #0467DF

      #llvm
        color: #262D3A

      #jekyll
        color: #CC0000

      #llamacpp
        color: #FF8236

        svg
          fill: #FF8236

      #zsh
        color: #F15A24

      #wireshark
        color: #1679A7

      #deepseek
        color: #4D6BFE

        svg
          fill: #4D6BFE

      #oci
        color: #C74634

        svg path
          fill: #C74634

      #cloudflare
        color: #F38020

      #bitwarden
        color: #175DDC

      #nodejs
        color: #5FA04E

      #nodemon
        color: #76D04B

      #babel
        color: #F9DC3E

      #xcode
        color: #147EFB

      #githubactions
        color: #2088FF

      #githubpages
        color: #222

      #homebrew
        color: #FBB040

      #obsidian
        color: #7C3AED

      #sympy
        color: #3B5526

      #prometheus
        color: #E6522C

      #yubico
        color: #84BD00

      #sqlite
        color: #003B57

      #mermaid
        color: #FF3670

